[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 100
# taken from pytorch flake8 configuration: 
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
# Added E731 to allows lambda expressions
ignore = E203,E305,E402,E501,E721,E741,F405,F821,F841,F999,W503,W504,C408,E302,W291,E303,E731

[mypy]
python_version = 3.6

[mypy-pytest]
ignore_missing_imports = True

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-tqdm]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[metadata]
name = torch-lucent
version = attr: lucent.__version__
author = The Lucent Authors
author_email=limsweekiat@gmail.com
description = Lucid for PyTorch. Collection of infrastructure and tools for research in neural network interpretability.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zimmerrol/lucent
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
license_file = LICENSE
license = Apache 2.0

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    torch >= 1.5.0
    torchvision
    kornia >= 0.6
    tqdm
    numpy
    ipython
    pillow
    future
    decorator
    scikit-learn
    
[options.extras_require]
dev =
    pytest-mock
    coverage
    coveralls
    flake8==4.0.1
    click==8.0.1
    black==22.1.0
    pytest==7.1.1
    mypy==1.0.1
    isort==5.10.1


[options.packages.find]
where = .